syntax = "proto3";

package auth;

option go_package = "./pkg/pb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc ValidateMerchant(ValidateMerchantRequest) returns (ValidateMerchantResponse) {}
}

// Register
message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  int64 status = 1;
  string error = 2;
}

// Login
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}

// Validate
message ValidateMerchantRequest { string token = 1; }

message ValidateMerchantResponse { 
  int64 status = 1;
  string error = 2; 
  int64 merchantId = 3;
}